# fitpin_ar_backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  environment.yml  export_environment.py  export_requirements.py  log-config.yml  package_update.bat  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy.yml
src/: Constant.py  CustumTypes.py  Server.py  Utills.py  log-config.yml
src/api/: BodyMEA.py  ClothesMEA.py  GetNukki.py  Payment.py  TryOn.py  VRTryon.py
src/lib/: pose_hrnet.py
