[tool.poetry]
name = "fitpin-ar-backend"
version = "0.1.0"
description = ""
authors = ["Lseoksee <da864268@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
opencv-python = "^4.9.0.80"
ultralytics = "^8.2.15"
cvzone = "^1.6.1"
rembg = "^2.0.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
